--- a/practice.ipynb
+++ b/practice.ipynb
@@ -140,6 +140,159 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Value:\n",
+    "  \n",
+    "  def __init__(self, data, _children=(), _op='', label=''):\n",
+    "    self.data = data\n",
+    "    self.grad = 0.0\n",
+    "    self._backward = lambda: None\n",
+    "    self._prev = set(_children)\n",
+    "    self._op = _op\n",
+    "    self.label = label\n",
+    "\n",
+    "  def __repr__(self):\n",
+    "    return f\"Value(data={self.data})\"\n",
+    "  \n",
+    "  def __add__(self, other):\n",
+    "    other = other if isinstance(other, Value) else Value(other)\n",
+    "    out = Value(self.data + other.data, (self, other), '+')\n",
+    "    \n",
+    "    def _backward():\n",
+    "      self.grad += 1.0 * out.grad\n",
+    "      other.grad += 1.0 * out.grad\n",
+    "    out._backward = _backward\n",
+    "    \n",
+    "    return out\n",
+    "\n",
+    "  def __mul__(self, other):\n",
+    "    other = other if isinstance(other, Value) else Value(other)\n",
+    "    out = Value(self.data * other.data, (self, other), '*')\n",
+    "    \n",
+    "    def _backward():\n",
+    "      self.grad += other.data * out.grad\n",
+    "      other.grad += self.data * out.grad\n",
+    "    out._backward = _backward\n",
+    "      \n",
+    "    return out\n",
+    "  \n",
+    "  def __pow__(self, other):\n",
+    "    assert isinstance(other, (int, float)), \"only supporting int/float powers for now\"\n",
+    "    out = Value(self.data**other, (self,), f'**{other}')\n",
+    "\n",
+    "    def _backward():\n",
+    "        self.grad += other * (self.data ** (other - 1)) * out.grad\n",
+    "    out._backward = _backward\n",
+    "\n",
+    "    return out\n",
+    "  \n",
+    "  def __rmul__(self, other): # other * self\n",
+    "    return self * other\n",
+    "\n",
+    "  def __truediv__(self, other): # self / other\n",
+    "    return self * other**-1\n",
+    "\n",
+    "  def __neg__(self): # -self\n",
+    "    return self * -1\n",
+    "\n",
+    "  def __sub__(self, other): # self - other\n",
+    "    return self + (-other)\n",
+    "\n",
+    "  def __radd__(self, other): # other + self\n",
+    "    return self + other\n",
+    "\n",
+    "  def tanh(self):\n",
+    "    x = self.data\n",
+    "    t = (math.exp(2*x) - 1)/(math.exp(2*x) + 1)\n",
+    "    out = Value(t, (self, ), 'tanh')\n",
+    "    \n",
+    "    def _backward():\n",
+    "      self.grad += (1 - t**2) * out.grad\n",
+    "    out._backward = _backward\n",
+    "    \n",
+    "    return out\n",
+    "  \n",
+    "  def exp(self):\n",
+    "    x = self.data\n",
+    "    out = Value(math.exp(x), (self, ), 'exp')\n",
+    "    \n",
+    "    def _backward():\n",
+    "      self.grad += out.data * out.grad # NOTE: in the video I incorrectly used = instead of +=. Fixed here.\n",
+    "    out._backward = _backward\n",
+    "    \n",
+    "    return out\n",
+    "  \n",
+    "  \n",
+    "  def backward(self):\n",
+    "    \n",
+    "    topo = []\n",
+    "    visited = set()\n",
+    "    def build_topo(v):\n",
+    "      if v not in visited:\n",
+    "        visited.add(v)\n",
+    "        for child in v._prev:\n",
+    "          build_topo(child)\n",
+    "        topo.append(v)\n",
+    "    build_topo(self)\n",
+    "    \n",
+    "    self.grad = 1.0\n",
+    "    for node in reversed(topo):\n",
+    "      node._backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Neuron:\n",
+    "  \n",
+    "  def __init__(self, nin):\n",
+    "    self.w = [Value(random.uniform(-1,1)) for _ in range(nin)]\n",
+    "    self.b = Value(random.uniform(-1,1))\n",
+    "  \n",
+    "  def __call__(self, x):\n",
+    "    # w * x + b\n",
+    "    act = sum((wi*xi for wi, xi in zip(self.w, x)), self.b)\n",
+    "    out = act.tanh()\n",
+    "    return out\n",
+    "  \n",
+    "  def parameters(self):\n",
+    "    return self.w + [self.b]\n",
+    "\n",
+    "class Layer:\n",
+    "  \n",
+    "  def __init__(self, nin, nout):\n",
+    "    self.neurons = [Neuron(nin) for _ in range(nout)]\n",
+    "  \n",
+    "  def __call__(self, x):\n",
+    "    outs = [n(x) for n in self.neurons]\n",
+    "    return outs[0] if len(outs) == 1 else outs\n",
+    "  \n",
+    "  def parameters(self):\n",
+    "    return [p for neuron in self.neurons for p in neuron.parameters()]\n",
+    "\n",
+    "class MLP:\n",
+    "  \n",
+    "  def __init__(self, nin, nouts):\n",
+    "    sz = [nin] + nouts\n",
+    "    self.layers = [Layer(sz[i], sz[i+1]) for i in range(len(nouts))]\n",
+    "  \n",
+    "  def __call__(self, x):\n",
+    "    for layer in self.layers:\n",
+    "      x = layer(x)\n",
+    "    return x\n",
+    "  \n",
+    "  def parameters(self):\n",
+    "    return [p for layer in self.layers for p in layer.parameters()]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
