--- a/Basics_of_Neural_Network.ipynb
+++ b/Basics_of_Neural_Network.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x289c1282290>]"
+       "[<matplotlib.lines.Line2D at 0x248d2060c10>]"
       ]
      },
      "execution_count": 4,
