--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Cloudy',\n",
+       " 'Cloudy',\n",
+       " 'Rainy',\n",
+       " 'Rainy',\n",
        " 'Rainy',\n",
        " 'Cloudy',\n",
        " 'Cloudy',\n",
-       " 'Cloudy',\n",
        " 'Sunny',\n",
-       " 'Cloudy',\n",
-       " 'Cloudy',\n",
        " 'Rainy',\n",
        " 'Rainy']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -112,8 +112,8 @@
      "text": [
       "Transition Matrix:\n",
       "    Sunny  Cloudy  Rainy\n",
-      "Sunny | 0.50  0.50  0.00\n",
-      "Cloudy | 0.33  0.67  0.00\n",
+      "Sunny | 0.00  0.50  0.50\n",
+      "Cloudy | 0.50  0.00  0.50\n",
       "Rainy | 0.00  1.00  0.00\n",
       "\n"
      ]
